# EmuCpu

./: ArithmeticLogicUnit.cc  ArithmeticLogicUnit.hh  ArithmeticLogicUnit_test  ArithmeticLogicUnit_test.cc  ArithmeticLogicUnit_test.pro  BusInterfaceUnit.cc  BusInterfaceUnit.hh  BusInterfaceUnit_test  BusInterfaceUnit_test.cc  BusInterfaceUnit_test.pro  Cpu.cc  Cpu.hh  Cpu8086.cc  Cpu8086.hh  Cpu8086_test.cc  Cpu_test.cc  Cpu_test.pro  DatabaseTester.cc  DatabaseTester.hh  DatabaseTester_test.cc  Defines.cc  Defines.hh  Disassembler_test.cc  DisassemblyWidget.cc  DisassemblyWidget.hh  ExecutionUnit.cc  ExecutionUnit.hh  ExecutionUnit_test  ExecutionUnit_test.cc  ExecutionUnit_test.pro  FlagsWidget.cc  FlagsWidget.ui  GeneralRegistersWidget.hh  INSTALL.txt  INumberReadableWritable.hh  INumberReadableWritable_test.cc  INumberReadableWritable_test.pro  INumberWritable.hh  Immediate.hh  InstructionCodeQueue.cc  (+53 more)
TEST8086/: AMIC3.ASM  AmerSong.ASM  D1E1.asm  EXTINT.asm  ExtIntNoDelay.asm  GROUP1.ASM  GROUP2.ASM  GROUP3.ASM  GROUP4.ASM  GROUP4B.ASM  GROUP5.ASM  J_Bond2.asm  LOADTEST.ASM  MVPROG2.ASM  SHORT1.ASM  SHORT1B.ASM  SHORT2.ASM  SHORT2B.ASM  SHORT2C.ASM  SHORT3.ASM  SHORT4.ASM  SHORT5.ASM  SHORT6.ASM  SHORT7.ASM  Sim86OS.asm  SumList.asm  TEST0005.ASM  TEST1.ASM  TEST10.ASM  TEST100.ASM  TEST11.ASM  TEST12.ASM  TEST13.ASM  TEST14.ASM  TEST15.ASM  TEST15B.ASM  TEST16.ASM  TEST17B.ASM  TEST18.ASM  TEST19.ASM  (+44 more)
data/: Makefile.am
doc/: Doxyfile  Ideas.odt
instructions/: AddressingModes8086.h  OperandTypes8086.h  gen_8086.sh  nums  nums.c
m4/: Makefile.am
src/: ArithmeticLogicUnit.cc  ArithmeticLogicUnit.hh  ArithmeticLogicUnit_test.cc  ArithmeticLogicUnit_test.pro  BusInterfaceUnit.cc  BusInterfaceUnit.hh  BusInterfaceUnit_test.cc  BusInterfaceUnit_test.pro  Cpu.cc  Cpu.hh  CpuComponents.cc  CpuComponents.hh  Cpu_test  Cpu_test.cc  Cpu_test.pro  DatabaseTester.cc  DatabaseTester.hh  DatabaseTester_test.cc  DatabaseTester_test.pro  Defines.cc  Defines.hh  Disassembler_test.cc  DisassemblySignalsAndSlots.cc  DisassemblySignalsAndSlots.hh  DisassemblyWidget.cc  DisassemblyWidget.hh  DisassemblyWidget.ui  EmuCpu.cc  EmuCpuWindow.cc  EmuCpuWindow.hh  EmuCpuWindow.ui  ExecutionUnit.cc  ExecutionUnit.hh  ExecutionUnit_test.cc  ExecutionUnit_test.pro  FlagRegisterSignalsAndSlots.cc  FlagRegisterSignalsAndSlots.hh  FlagsWidget.cc  FlagsWidget.hh  GeneralRegisterSignalsAndSlots.cc  (+128 more)
testing/: database.cc  opcode.asm  test.cc
tests/: Makefile  StorageUnit.cc  StorageUnit.hh  StorageUnit_test.cc  StorageUnit_test.pro  main  main.cc  main.pro
ui/: MainWindow.ui
